[package]
name = "rshyeong"
version = "0.2.1"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
description = "Hyeong-lang interpreter"
repository = "https://github.com/tirr-c/hyeong-rs.git"
readme = "README.md"
keywords = ["esolang", "hyeong"]
license = "MIT/Apache-2.0"
edition = "2021"

[badges]
travis-ci = { repository = "tirr-c/hyeong-rs" }

[features]
big-rational = []

[dependencies.num]
version = "0.1.36"
default-features = false
features = ["bigint", "rational"]

[dependencies.clap]
version = "3.0.14"
default-features = false
features = ["std", "color", "wrap_help", "derive"]
