[package]
name = "rshyeong"
version = "0.3.0"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
description = "Hyeong-lang interpreter"
repository = "https://github.com/tirr-c/hyeong-rs.git"
readme = "README.md"
keywords = ["esolang", "hyeong"]
license = "MIT/Apache-2.0"
edition = "2021"

[badges]
travis-ci = { repository = "tirr-c/hyeong-rs" }

[features]
big-rational = []

[dependencies]
num-traits = "0.2.14"

[dependencies.num-rational]
version = "0.4.0"
default-features = false
features = ["num-bigint"]

[dependencies.clap]
version = "3.0.14"
default-features = false
features = ["std", "color", "wrap_help", "derive"]
